--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -36,6 +36,7 @@ DashboardScreen As screen:
         ZIndex: =1
 
         ctnHeaderDS As groupContainer.horizontalAutoLayoutContainer:
+            DropShadow: =DropShadow.None
             Fill: =AllScreensCSS.RColorWhite
             FillPortions: =0
             Height: |
@@ -48,6 +49,10 @@ DashboardScreen As screen:
             LayoutMinWidth: =Parent.Width-20
             LayoutMode: =LayoutMode.Auto
             PaddingTop: =5
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width
             X: =0.00
             ZIndex: =1
@@ -128,6 +133,7 @@ DashboardScreen As screen:
                 ZIndex: =6
 
         ctnUserNameDS As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |
@@ -137,6 +143,10 @@ DashboardScreen As screen:
             LayoutMinWidth: =250
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width
             X: =21.36
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+10
