--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -19,6 +19,7 @@ EstimateScreen As screen:
 
         ctnHeaderES As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.Center
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -32,6 +33,10 @@ EstimateScreen As screen:
             PaddingLeft: =10
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width
             X: =0.00
             ZIndex: =1
@@ -111,6 +116,7 @@ EstimateScreen As screen:
 
         ctnUserHeaderES As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.None
             FillPortions: =0
             Height: |-
                 =//Parent.Height/14
@@ -119,6 +125,10 @@ EstimateScreen As screen:
             LayoutMinWidth: =250
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width-40
             X: =21.36
             Y: =ctnHeaderES.Y+ctnHeaderES.Height+10
@@ -168,10 +178,15 @@ EstimateScreen As screen:
 
             ctnProgressBarES As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.Center
+                DropShadow: =DropShadow.None
                 FillPortions: =0
                 Height: =130
                 LayoutMinHeight: =100
                 LayoutMinWidth: =Parent.Width/1.04
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
                 Width: =Parent.Width
                 X: =87
                 Y: =77
