--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -22,6 +22,7 @@ RejectedLeads As screen:
 
         ctnHeaderRS As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -34,6 +35,10 @@ RejectedLeads As screen:
             LayoutMode: =LayoutMode.Auto
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width-20
             X: =0.00
             ZIndex: =1
@@ -121,6 +126,7 @@ RejectedLeads As screen:
 
         ctnLeadsRS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.None
             FillPortions: =0
             Height: |-
                 =//Parent.Height/14
@@ -129,6 +135,10 @@ RejectedLeads As screen:
             LayoutMinWidth: =250
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width-40
             X: =21.36
             Y: =ctnHeaderRS.Y+ctnHeaderRS.Height+10
@@ -151,6 +161,7 @@ RejectedLeads As screen:
                 ZIndex: =1
 
         ctnMiddleRS As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =Parent.Height-ctnLeadsRS.Height-ctnHeaderRS.Height
@@ -158,6 +169,10 @@ RejectedLeads As screen:
             LayoutMinWidth: =250
             PaddingLeft: =10
             PaddingRight: =10
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width/1.02
             X: =15
             ZIndex: =3
