--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -23,6 +23,7 @@ ScopeScreen As screen:
 
         ctnHeaderSS As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.Center
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -36,6 +37,10 @@ ScopeScreen As screen:
             PaddingLeft: =10
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width
             X: =0.00
             ZIndex: =1
@@ -115,6 +120,7 @@ ScopeScreen As screen:
 
         ctnUserHeaderSS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.None
             FillPortions: =0
             Height: |-
                 =//Parent.Height/14
@@ -123,6 +129,10 @@ ScopeScreen As screen:
             LayoutMinWidth: =250
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width-40
             X: =21.36
             Y: =ctnHeaderSS.Y+ctnHeaderSS.Height+10
@@ -159,10 +169,15 @@ ScopeScreen As screen:
 
             ctnProgressBarSS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.Center
+                DropShadow: =DropShadow.None
                 FillPortions: =0
                 Height: =130
                 LayoutMinHeight: =100
                 LayoutMinWidth: =Parent.Width/1.04
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
                 Width: =Parent.Width
                 X: =87
                 Y: =77
