--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -21,6 +21,7 @@ SubmittedLeadScreen As screen:
         ZIndex: =1
 
         ctnHeaderSLS As groupContainer.horizontalAutoLayoutContainer:
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -33,6 +34,10 @@ SubmittedLeadScreen As screen:
             LayoutMode: =LayoutMode.Auto
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width-20
             X: =0.00
             ZIndex: =1
@@ -129,6 +134,7 @@ SubmittedLeadScreen As screen:
 
         ctnUserNameSLS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.None
             FillPortions: =0
             Height: |-
                 =//Parent.Height/14
@@ -137,6 +143,10 @@ SubmittedLeadScreen As screen:
             LayoutMinWidth: =250
             PaddingRight: =0.00
             PaddingTop: =0.00
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width-40
             X: =21.36
             Y: =ctnHeaderSLS.Y+ctnHeaderSLS.Height+10
@@ -159,6 +169,7 @@ SubmittedLeadScreen As screen:
                 ZIndex: =1
 
         ctnMiddleSLS As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.None
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =Parent.Height-ctnUserNameSLS.Height-ctnHeaderSLS.Height
@@ -166,6 +177,10 @@ SubmittedLeadScreen As screen:
             LayoutMinWidth: =250
             PaddingLeft: =10
             PaddingRight: =10
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
             Width: =Parent.Width/1.02
             X: =15
             ZIndex: =3
