--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -698,6 +698,19 @@ LeadScreen As screen:
                     Y: =txitnptrejectLdS.Height+txitnptrejectLdS.Y+40
                     ZIndex: =8
 
+                Button3 As button:
+                    Fill: =Header.SHRed
+                    Height: =60
+                    HoverFill: =
+                    OnSelect: |-
+                        =UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadEstimateNumber:Blank()});
+                    Text: ="Reset Estimate Number"
+                    Visible: =If(!IsBlank(LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID,LeadEstimateNumber)),true,false)
+                    Width: =300
+                    X: =btnestimatenumberLdS.Width+btnestimatenumberLdS.X+50
+                    Y: =lblestimatenumberleaddetailsLdS.Height+lblestimatenumberleaddetailsLdS.Y
+                    ZIndex: =9
+
             ctnleaddetailsLdS As groupContainer.manualLayoutContainer:
                 BorderColor: =RGBA(0, 0, 0, 0.16)
                 BorderThickness: =2
