--- a/QuantumTechnicianApp/Src/QuotedSOldLeads_1.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads_1.fx.yaml
@@ -74,7 +74,7 @@ QuotedSOldLeads_1 As screen:
                 Height: =Parent.Height/2
                 Icon: =Icon.ChevronLeft
                 OnSelect: |-
-                    =Navigate(DashboardScreen);
+                    =Navigate(QuotedSOldLeads);
                     UpdateContext({locInfoExpanded:false});
                     Set(VarNavigateId,Blank());
                     Reset(IntxtSearchBoxSoldLeads_1);
@@ -636,7 +636,7 @@ QuotedSOldLeads_1 As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
                     Text: ="Quarter"
-                    Width: =Parent.Width/8
+                    Width: =Parent.Width/7
                     X: =1
                     Y: =2*(btnLeadsSL_1.Y)
                     ZIndex: =7
@@ -723,7 +723,7 @@ QuotedSOldLeads_1 As screen:
                                 0.00
                             )
                         )*/
-                        If(VarHeader="Quoted",Sum(Filter(Localleadinformation,LeadStatus=VarHeader && Email=User().Email && If(LeadStatus="Quoted",Year(ProposedLeadDate)=Year('glrySold/QuotedLeads'.Selected.Year)&& Month(ProposedLeadDate)>= ThisItem.StartMonth && Month(ProposedLeadDate)<=ThisItem.EndMonth)),ProposedLeadIncentives))
+                        "$ " & If(VarHeader="Quoted",If(!IsBlank( Sum(Filter(Localleadinformation,LeadStatus=VarHeader && Email=User().Email && If(LeadStatus="Quoted",Year(ProposedLeadDate)=Year('glrySold/QuotedLeads'.Selected.Year)&& Month(ProposedLeadDate)>= ThisItem.StartMonth && Month(ProposedLeadDate)<=ThisItem.EndMonth)),ProposedLeadIncentives)),Text( Sum(Filter(Localleadinformation,LeadStatus=VarHeader && Email=User().Email && If(LeadStatus="Quoted",Year(ProposedLeadDate)=Year('glrySold/QuotedLeads'.Selected.Year)&& Month(ProposedLeadDate)>= ThisItem.StartMonth && Month(ProposedLeadDate)<=ThisItem.EndMonth)),ProposedLeadIncentives),"0.00"),Text("0.00")))
                     VerticalAlign: =VerticalAlign.Top
                     Visible: =If(btnheaderSoldLeads_1.Text="Quoted Leads" ||btnheaderSoldLeads_1.Text="Sold Leads",true,false)
                     Width: =Parent.Width/3
